--- a/Examples/Custom/CMakeLists.txt
+++ b/Examples/Custom/CMakeLists.txt
@@ -12,5 +12,5 @@ include(${OpenIGTLink_USE_FILE})
 ADD_EXECUTABLE(NowyKlient  NowyKlient.cxx)
 TARGET_LINK_LIBRARIES(NowyKlient OpenIGTLink)
 
-ADD_EXECUTABLE(NowySerwer   NowyServer.cxx)
-TARGET_LINK_LIBRARIES(NowyServer OpenIGTLink)
+ADD_EXECUTABLE(NowySerwer   NowySerwer.cxx)
+TARGET_LINK_LIBRARIES(NowySerwer OpenIGTLink)
